fixed profile alignment

--- a/app/assets/stylesheets/matching.scss
+++ b/app/assets/stylesheets/matching.scss
@@ -56,3 +56,30 @@ input[type="text"]
 #describe-action {
 	width: 520px;
 }
+
+.profile {
+	float: right;
+	margin-right: 20px;
+	font-size: 25px;
+	display: inline;
+	width: 25%;
+
+}
+
+#username {
+	display: inline-block;
+	
+	padding-top: 21px;
+}
+
+#propic{
+	float:right
+}
+
+img {
+	vertical-align: center;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border: 5px solid #000;
+}
